# g2o

g2o/examples/ba_demo/: ba_demo.cpp
g2o/examples/ba_demo2/: CMakeLists.txt  Config.h  DataReader.cpp  DataReader.h  EdgeSE3ExpmapPrior.cpp  EdgeSE3ExpmapPrior.h  Utils.h  ba_demo.cpp  compile.sh  run-0-0-0.sh  run-1-0-0.sh  run-1-0-1.sh  run-1-0.1-0.sh  run-1-0.1-1.sh  run.sh
g2o/examples/ba_demo2/input/GeneratedDtInMotion/Thu_1_Apr_2021_04-45-56/: Thu_1_Apr_2021_04-45-58-generated_triangles_in_motion.txt  Thu_1_Apr_2021_04-45-58-generated_triangles_in_motion.yml  matNoise-m-0-s-1.yml  parameters_bUseAzToInit.yml  ptsForDtInFlow.yml  userdefcorrpts.yml  userdefextrinsics.yml  userdefintrinsics.yml  wireframe-sedan-3d.txt
g2o/examples/ba_demo2/octave/: test_trf.m
g2o/examples/ba_demo2/results/: input_1_graph.g2o  output_1.txt
